完善前端通知功能
